crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__jace_the_mind_sculptor_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Activated",
      "effect": {
        "type": "Dig",
        "count": {
          "type": "Fixed",
          "value": 1
        },
        "destination": null,
        "keep_count": null,
        "up_to": false,
        "filter": {
          "type": "Any"
        },
        "rest_destination": null,
        "reveal": false
      },
      "cost": {
        "type": "Loyalty",
        "amount": 2
      },
      "sub_ability": {
        "kind": "Spell",
        "effect": {
          "type": "PutAtLibraryPosition",
          "target": {
            "type": "ParentTarget"
          },
          "count": {
            "type": "Fixed",
            "value": 1
          },
          "position": {
            "type": "Bottom"
          }
        },
        "cost": null,
        "sub_ability": null,
        "duration": null,
        "description": null,
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": null,
        "optional_targeting": false,
        "optional": true,
        "forward_result": false
      },
      "duration": null,
      "description": "[+2]: Look at the top card of target player's library. You may put that card on the bottom of that player's library.",
      "target_prompt": null,
      "sorcery_speed": true,
      "activation_restrictions": [
        {
          "type": "AsSorcery"
        },
        {
          "type": "OnlyOnceEachTurn"
        }
      ],
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    },
    {
      "kind": "Activated",
      "effect": {
        "type": "Draw",
        "count": {
          "type": "Fixed",
          "value": 3
        },
        "target": {
          "type": "Controller"
        }
      },
      "cost": {
        "type": "Loyalty",
        "amount": 0
      },
      "sub_ability": {
        "kind": "Spell",
        "effect": {
          "type": "PutAtLibraryPosition",
          "target": {
            "type": "Typed",
            "type_filters": [
              "Card"
            ],
            "controller": "You",
            "properties": [
              {
                "type": "InZone",
                "zone": "Hand"
              }
            ]
          },
          "count": {
            "type": "Fixed",
            "value": 2
          },
          "position": {
            "type": "Top"
          }
        },
        "cost": null,
        "sub_ability": null,
        "duration": null,
        "description": null,
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      },
      "duration": null,
      "description": "[0]: Draw three cards, then put two cards from your hand on top of your library in any order.",
      "target_prompt": null,
      "sorcery_speed": true,
      "activation_restrictions": [
        {
          "type": "AsSorcery"
        },
        {
          "type": "OnlyOnceEachTurn"
        }
      ],
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    },
    {
      "kind": "Activated",
      "effect": {
        "type": "Bounce",
        "target": {
          "type": "Typed",
          "type_filters": [
            "Creature"
          ],
          "controller": null,
          "properties": []
        },
        "destination": null
      },
      "cost": {
        "type": "Loyalty",
        "amount": -1
      },
      "sub_ability": null,
      "duration": null,
      "description": "[−1]: Return target creature to its owner's hand.",
      "target_prompt": null,
      "sorcery_speed": true,
      "activation_restrictions": [
        {
          "type": "AsSorcery"
        },
        {
          "type": "OnlyOnceEachTurn"
        }
      ],
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    },
    {
      "kind": "Activated",
      "effect": {
        "type": "ChangeZoneAll",
        "origin": null,
        "destination": "Exile",
        "target": {
          "type": "Typed",
          "type_filters": [
            "Card"
          ],
          "controller": null,
          "properties": []
        }
      },
      "cost": {
        "type": "Loyalty",
        "amount": -12
      },
      "sub_ability": {
        "kind": "Spell",
        "effect": {
          "type": "ChangeZoneAll",
          "origin": "Hand",
          "destination": "Library",
          "target": {
            "type": "Player"
          }
        },
        "cost": null,
        "sub_ability": {
          "kind": "Spell",
          "effect": {
            "type": "Shuffle",
            "target": {
              "type": "Controller"
            }
          },
          "cost": null,
          "sub_ability": null,
          "duration": null,
          "description": null,
          "target_prompt": null,
          "sorcery_speed": false,
          "condition": null,
          "optional_targeting": false,
          "optional": false,
          "forward_result": false
        },
        "duration": null,
        "description": null,
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      },
      "duration": null,
      "description": "[−12]: Exile all cards from target player's library, then that player shuffles their hand into their library.",
      "target_prompt": null,
      "sorcery_speed": true,
      "activation_restrictions": [
        {
          "type": "AsSorcery"
        },
        {
          "type": "OnlyOnceEachTurn"
        }
      ],
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
