crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__jade_mage_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "PreLoweredSpell": {
        "kind": "Activated",
        "effect": {
          "type": "Token",
          "name": "Saproling",
          "power": {
            "type": "Fixed",
            "value": 1
          },
          "toughness": {
            "type": "Fixed",
            "value": 1
          },
          "types": [
            "Creature",
            "Saproling"
          ],
          "colors": [
            "Green"
          ],
          "keywords": [],
          "tapped": false,
          "count": {
            "type": "Fixed",
            "value": 1
          },
          "owner": {
            "type": "Controller"
          },
          "enters_attacking": false
        },
        "cost": {
          "type": "Mana",
          "cost": {
            "type": "Cost",
            "shards": [
              "Green"
            ],
            "generic": 2
          }
        },
        "sub_ability": null,
        "duration": null,
        "description": "{2}{G}: Create a 1/1 green Saproling creature token.",
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      }
    }
  ],
  "source_text": "{2}{G}: Create a 1/1 green Saproling creature token.",
  "card_name": "Jade Mage"
}
