crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__kroxa_titan_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "PreLoweredTrigger": {
        "mode": "ChangesZone",
        "execute": {
          "kind": "Spell",
          "effect": {
            "type": "Sacrifice",
            "target": {
              "type": "SelfRef"
            },
            "count": {
              "type": "Fixed",
              "value": 1
            }
          },
          "cost": null,
          "sub_ability": null,
          "duration": null,
          "description": null,
          "target_prompt": null,
          "sorcery_speed": false,
          "condition": null,
          "optional_targeting": false,
          "optional": false,
          "forward_result": false
        },
        "valid_card": {
          "type": "SelfRef"
        },
        "origin": null,
        "destination": "Battlefield",
        "trigger_zones": [
          "Battlefield"
        ],
        "phase": null,
        "optional": false,
        "damage_kind": "Any",
        "secondary": false,
        "valid_target": null,
        "valid_source": null,
        "description": "When ~ enters, sacrifice it unless it escaped.",
        "constraint": null,
        "condition": {
          "type": "Not",
          "condition": {
            "type": "CastVariantPaid",
            "variant": "Escape"
          }
        },
        "batched": false
      }
    },
    {
      "PreLoweredTrigger": {
        "mode": "EntersOrAttacks",
        "execute": {
          "kind": "Spell",
          "effect": {
            "type": "Discard",
            "count": {
              "type": "Fixed",
              "value": 1
            },
            "target": {
              "type": "Controller"
            }
          },
          "cost": null,
          "sub_ability": {
            "kind": "Spell",
            "effect": {
              "type": "LoseLife",
              "amount": {
                "type": "Fixed",
                "value": 3
              }
            },
            "cost": null,
            "sub_ability": null,
            "duration": null,
            "description": null,
            "target_prompt": null,
            "sorcery_speed": false,
            "condition": null,
            "optional_targeting": false,
            "optional": false,
            "forward_result": false,
            "player_scope": {
              "type": "Opponent"
            }
          },
          "duration": null,
          "description": null,
          "target_prompt": null,
          "sorcery_speed": false,
          "condition": null,
          "optional_targeting": false,
          "optional": false,
          "forward_result": false,
          "player_scope": {
            "type": "Opponent"
          }
        },
        "valid_card": {
          "type": "SelfRef"
        },
        "origin": null,
        "destination": "Battlefield",
        "trigger_zones": [
          "Battlefield"
        ],
        "phase": null,
        "optional": false,
        "damage_kind": "Any",
        "secondary": false,
        "valid_target": null,
        "valid_source": null,
        "description": "Whenever ~ enters or attacks, each opponent discards a card, then each opponent who didn't discard a nonland card this way loses 3 life.",
        "constraint": null,
        "condition": null,
        "batched": false
      }
    },
    {
      "Keyword": {
        "Escape": {
          "cost": {
            "type": "Cost",
            "shards": [
              "Black",
              "Black",
              "Red",
              "Red"
            ],
            "generic": 0
          },
          "exile_count": 5
        }
      }
    }
  ],
  "source_text": "When Kroxa enters, sacrifice it unless it escaped.\nWhenever Kroxa enters or attacks, each opponent discards a card, then each opponent who didn't discard a nonland card this way loses 3 life.\nEscape—{B}{B}{R}{R}, Exile five other cards from your graveyard. (You may cast this card from your graveyard for its escape cost.)",
  "card_name": "Kroxa, Titan of Death's Hunger"
}
