crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__liliana_of_the_veil_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Activated",
      "effect": {
        "type": "Discard",
        "count": {
          "type": "Fixed",
          "value": 1
        },
        "target": {
          "type": "Controller"
        }
      },
      "cost": {
        "type": "Loyalty",
        "amount": 1
      },
      "sub_ability": null,
      "duration": null,
      "description": "[+1]: Each player discards a card.",
      "target_prompt": null,
      "sorcery_speed": true,
      "activation_restrictions": [
        {
          "type": "AsSorcery"
        },
        {
          "type": "OnlyOnceEachTurn"
        }
      ],
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false,
      "player_scope": {
        "type": "All"
      }
    },
    {
      "kind": "Activated",
      "effect": {
        "type": "Sacrifice",
        "target": {
          "type": "Typed",
          "type_filters": [
            "Creature"
          ],
          "controller": null,
          "properties": []
        },
        "count": {
          "type": "Fixed",
          "value": 1
        }
      },
      "cost": {
        "type": "Loyalty",
        "amount": -2
      },
      "sub_ability": null,
      "duration": null,
      "description": "[−2]: Target player sacrifices a creature.",
      "target_prompt": null,
      "sorcery_speed": true,
      "activation_restrictions": [
        {
          "type": "AsSorcery"
        },
        {
          "type": "OnlyOnceEachTurn"
        }
      ],
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    },
    {
      "kind": "Activated",
      "effect": {
        "type": "Unimplemented",
        "name": "separate",
        "description": "Separate all permanents target player controls into two piles"
      },
      "cost": {
        "type": "Loyalty",
        "amount": -6
      },
      "sub_ability": {
        "kind": "Spell",
        "effect": {
          "type": "Sacrifice",
          "target": {
            "type": "Typed",
            "type_filters": [
              "Permanent"
            ],
            "controller": null,
            "properties": []
          },
          "count": {
            "type": "Fixed",
            "value": 1
          }
        },
        "cost": null,
        "sub_ability": null,
        "duration": null,
        "description": null,
        "target_prompt": null,
        "sorcery_speed": false,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      },
      "duration": null,
      "description": "[−6]: Separate all permanents target player controls into two piles. That player sacrifices all permanents in the pile of their choice.",
      "target_prompt": null,
      "sorcery_speed": true,
      "activation_restrictions": [
        {
          "type": "AsSorcery"
        },
        {
          "type": "OnlyOnceEachTurn"
        }
      ],
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
